--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -64,6 +64,16 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/sessions" class="nav-link" data-page="sessions">
+                        <svg class="nav-icon" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        Sessions
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/settings" class="nav-link" data-page="settings">
                         <svg class="nav-icon" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
